--- a/src/pages/chi-siamo.astro
+++ b/src/pages/chi-siamo.astro
@@ -19,7 +19,7 @@ const profileOptBase = `${base}images/opt/V_MG_9796`;
     subtitle=" "
     image={heroImg}
     imagePositionD="center 40%"
-    imagePositionM="center 50%"
+    imagePositionM="40% 50%"
     imageAlt="Interno dello studio"
     cta={{ label: "Contattaci", href: "/contatti" }}
     align="left"
