--- a/src/pages/contatti-grazie.astro
+++ b/src/pages/contatti-grazie.astro
@@ -37,3 +37,7 @@ const heroImg = `${base}images/pages/LF_Home2.png`;
     padding-top: 0;
   }
 </style>
+
+<script is:inline>
+  window.umami?.track("Form: Invia richiesta - successo");
+</script>
