--- a/src/pages/contatti-errore.astro
+++ b/src/pages/contatti-errore.astro
@@ -39,3 +39,7 @@ const heroImg = `${base}images/pages/LF_Home2.png`;
     padding-top: 0;
   }
 </style>
+
+<script is:inline>
+  window.umami?.track("Form: Invia richiesta - errore");
+</script>
